# SLICOT-Reference

./: .editorconfig  .gitignore  .gitlab-ci.yml  .version  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  CTestCustom.cmake.in  Contributors.md  INSTALL.md  Installation.txt  KNOWN_ISSUES.md  LICENSE  README.md  ReleaseNotes.md  SLICOTConfig.cmake.in  libindex.html  make.inc  make_Unix.inc  makefile  makefile_Unix  slicot.pc.in
.github/workflows/: build-msys2.yml  build-unix.yml
.gitlab/docker/: build-all.sh
.gitlab/docker/almalinux-image/: Dockerfile.10  Dockerfile.8  Dockerfile.9  build.sh
.gitlab/docker/amd-image/: Dockerfile.amd5.0  build.sh
.gitlab/docker/debian-image/: Dockerfile.bookworm  Dockerfile.trixie  build.sh
.gitlab/docker/fedora-image/: Dockerfile.fc40  Dockerfile.fc41  Dockerfile.fc42  Dockerfile.fcrawhide  build.sh
.gitlab/docker/intel-image/: Dockerfile.2021  Dockerfile.2022  Dockerfile.2023  Dockerfile.2024  Dockerfile.2025  build.sh
.gitlab/docker/nvidia-image/: Dockerfile.21.11  Dockerfile.22.11  Dockerfile.23.11  Dockerfile.24.9  Dockerfile.25.3  build.sh
.gitlab/docker/ubuntu-image/: Dockerfile.focal  Dockerfile.jammy  Dockerfile.latest  Dockerfile.noble  build.sh
cmake/: FortranCompilerSettings.cmake  GitVersion.cmake  OutOfSource.cmake  SLICOTConfig.cmake.in  new-version.sh  update-date.sh  update-doi.sh
debian/: changelog  control  copyright  libslicot-dev.install  libslicot-doc.doc-base  libslicot-doc.docs  libslicot-pic.install  libslicot5.install  libslicot64-5.install  libslicot64-pic.install  rules
debian/source/: lintian-overrides  options
doc/: AB01MD.html  AB01ND.html  AB01OD.html  AB04MD.html  AB05MD.html  AB05ND.html  AB05OD.html  AB05PD.html  AB05QD.html  AB05RD.html  AB07MD.html  AB07ND.html  AB08ND.html  AB08NW.html  AB08NZ.html  AB09AD.html  AB09BD.html  AB09CD.html  AB09DD.html  AB09ED.html  AB09FD.html  AB09GD.html  AB09HD.html  AB09ID.html  AB09JD.html  AB09KD.html  AB09MD.html  AB09ND.html  AB13AD.html  AB13BD.html  AB13CD.html  AB13DD.html  AB13DX.html  AB13ED.html  AB13FD.html  AB13HD.html  AB13ID.html  AB13MD.html  AG08BD.html  AG08BZ.html  (+227 more)
examples/: AB04MD.res  AB05MD.res  AB05QD.res  AB05RD.res  AB08NW.res  AB08NZ.res  AB09AD.res  AB09BD.res  AB09CD.res  AB09DD.res  AB09FD.res  AB09GD.res  AB09ID.res  AB09JD.res  AB09KD.res  AB09MD.res  AB13DD.res  AB13ED.res  AG08BD.res  AG08BZ.res  BB01AD.res  BB03AD.res  BD01AD.res  CMakeLists.txt  DF01MD.res  DG01MD.res  DG01ND.res  DG01OD.res  DK01MD.res  FB01QD.res  FB01RD.res  FD01AD.res  MB01TD.res  MB02CD.res  MB02GD.res  MB02HD.res  MB02ID.res  MB02JX.res  MB02KD.res  MB02MD.res  (+314 more)
examples/cmake-how-to-example/: CMakeLists.txt  TAB01MD.f
examples/results/: AB01MD.res  AB01ND.res  AB01OD.res  AB05ND.res  AB05OD.res  AB05PD.res  AB07MD.res  AB07ND.res  AB08ND.res  AB09ED.res  AB09HD.res  AB09ND.res  AB13AD.res  AB13BD.res  AB13CD.res  AB13FD.res  AB13ID.res  AB13MD.res  BB02AD.res  BB04AD.res  BD02AD.res  DE01OD.res  DE01PD.res  FB01SD.res  FB01TD.res  FB01VD.res  IB01AD.res  IB01BD.res  IB01CD.res  IB03AD.res  IB03BD.res  MB02DD.res  MB02ED.res  MB02FD.res  MB02JD.res  MB02ND.res  MB02QD.res  MB02SD.res  MB02VD.res  MB03FZ.res  (+95 more)
src/: AB01MD.f  AB01ND.f  AB01OD.f  AB04MD.f  AB05MD.f  AB05ND.f  AB05OD.f  AB05PD.f  AB05QD.f  AB05RD.f  AB05SD.f  AB07MD.f  AB07ND.f  AB08MD.f  AB08MZ.f  AB08ND.f  AB08NW.f  AB08NX.f  AB08NY.f  AB08NZ.f  AB09AD.f  AB09AX.f  AB09BD.f  AB09BX.f  AB09CD.f  AB09CX.f  AB09DD.f  AB09ED.f  AB09FD.f  AB09GD.f  AB09HD.f  AB09HX.f  AB09HY.f  AB09ID.f  AB09IX.f  AB09IY.f  AB09JD.f  AB09JV.f  AB09JW.f  AB09JX.f  (+584 more)
src_aux/: CMakeLists.txt  makefile  makefile_Unix  readme
