macro(add_slicot_test name src)
    get_filename_component(baseNAME ${src} NAME_WE)
    string(SUBSTRING ${baseNAME} 1 -1 baseNAME)
    set(TEST_INPUT  "${CMAKE_CURRENT_SOURCE_DIR}/data/${baseNAME}.dat")
    set(TEST_OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/${baseNAME}.exa")


    # if(EXISTS "${TEST_INPUT}")
    #     MESSAGE(STATUS "Test Input ${TEST_INPUT} exists")
    # else()
    #     MESSAGE(STATUS "Test Input ${TEST_INPUT} does not exist")
    # endif()
    add_executable(${name} ${src})
    target_link_libraries(${name} SLICOT::slicot)
    if(EXISTS "${TEST_INPUT}")
        add_test(NAME test-${baseNAME} COMMAND "${CMAKE_COMMAND}"
            -DTEST=$<TARGET_FILE:${name}>
            -DINPUT=${TEST_INPUT}
            -DOUTPUT=${TEST_OUTPUT}
            -DINTDIR=${CMAKE_CFG_INTDIR}
            -P "${CMAKE_CURRENT_SOURCE_DIR}/runtest.cmake")
    else()
        add_test(NAME test-${name} COMMAND "${CMAKE_COMMAND}"
            -DTEST=$<TARGET_FILE:${name}>
            -DOUTPUT=${TEST_OUTPUT}
            -DINTDIR=${CMAKE_CFG_INTDIR}
            -P "${LAPACK_SOURCE_DIR}/TESTING/runtest.cmake")
    endif()
endmacro()


add_slicot_test(ab01md TAB01MD.f)
add_slicot_test(ab01nd TAB01ND.f)
add_slicot_test(ab01od TAB01OD.f)
add_slicot_test(ab04md TAB04MD.f)
add_slicot_test(ab05md TAB05MD.f)
add_slicot_test(ab05nd TAB05ND.f)
add_slicot_test(ab05od TAB05OD.f)
add_slicot_test(ab05pd TAB05PD.f)
add_slicot_test(ab05qd TAB05QD.f)
add_slicot_test(ab05rd TAB05RD.f)
add_slicot_test(ab07md TAB07MD.f)
add_slicot_test(ab07nd TAB07ND.f)
add_slicot_test(ab08nd TAB08ND.f)
add_slicot_test(ab08nw TAB08NW.f)
add_slicot_test(ab08nz TAB08NZ.f)
add_slicot_test(ab09ad TAB09AD.f)
add_slicot_test(ab09bd TAB09BD.f)
add_slicot_test(ab09cd TAB09CD.f)
add_slicot_test(ab09dd TAB09DD.f)
add_slicot_test(ab09ed TAB09ED.f)
add_slicot_test(ab09fd TAB09FD.f)
add_slicot_test(ab09gd TAB09GD.f)
add_slicot_test(ab09hd TAB09HD.f)
add_slicot_test(ab09id TAB09ID.f)
add_slicot_test(ab09jd TAB09JD.f)
add_slicot_test(ab09kd TAB09KD.f)
add_slicot_test(ab09md TAB09MD.f)
add_slicot_test(ab09nd TAB09ND.f)
add_slicot_test(ab13ad TAB13AD.f)
add_slicot_test(ab13bd TAB13BD.f)
add_slicot_test(ab13cd TAB13CD.f)
add_slicot_test(ab13dd TAB13DD.f)
add_slicot_test(ab13ed TAB13ED.f)
add_slicot_test(ab13fd TAB13FD.f)
add_slicot_test(ab13id TAB13ID.f)
add_slicot_test(ab13md TAB13MD.f)
add_slicot_test(ag08bd TAG08BD.f)
add_slicot_test(ag08bz TAG08BZ.f)
add_slicot_test(bb01ad TBB01AD.f)
add_slicot_test(bb02ad TBB02AD.f)
add_slicot_test(bb03ad TBB03AD.f)
add_slicot_test(bb04ad TBB04AD.f)
add_slicot_test(bd01ad TBD01AD.f)
add_slicot_test(bd02ad TBD02AD.f)
add_slicot_test(de01od TDE01OD.f)
add_slicot_test(de01pd TDE01PD.f)
add_slicot_test(df01md TDF01MD.f)
add_slicot_test(dg01md TDG01MD.f)
add_slicot_test(dg01nd TDG01ND.f)
add_slicot_test(dg01od TDG01OD.f)
add_slicot_test(dk01md TDK01MD.f)
add_slicot_test(fb01qd TFB01QD.f)
add_slicot_test(fb01rd TFB01RD.f)
add_slicot_test(fb01sd TFB01SD.f)
add_slicot_test(fb01td TFB01TD.f)
add_slicot_test(fb01vd TFB01VD.f)
add_slicot_test(fd01ad TFD01AD.f)
add_slicot_test(ib01ad TIB01AD.f)
add_slicot_test(ib01bd TIB01BD.f)
add_slicot_test(ib01cd TIB01CD.f)
add_slicot_test(ib03ad TIB03AD.f)
add_slicot_test(ib03bd TIB03BD.f)
add_slicot_test(mb01td TMB01TD.f)
add_slicot_test(mb02cd TMB02CD.f)
add_slicot_test(mb02dd TMB02DD.f)
add_slicot_test(mb02ed TMB02ED.f)
add_slicot_test(mb02fd TMB02FD.f)
add_slicot_test(mb02gd TMB02GD.f)
add_slicot_test(mb02hd TMB02HD.f)
add_slicot_test(mb02id TMB02ID.f)
add_slicot_test(mb02jd TMB02JD.f)
add_slicot_test(mb02jx TMB02JX.f)
add_slicot_test(mb02kd TMB02KD.f)
add_slicot_test(mb02md TMB02MD.f)
add_slicot_test(mb02nd TMB02ND.f)
add_slicot_test(mb02qd TMB02QD.f)
add_slicot_test(mb02sd TMB02SD.f)
add_slicot_test(mb02vd TMB02VD.f)
add_slicot_test(mb03bd TMB03BD.f)
add_slicot_test(mb03bz TMB03BZ.f)
add_slicot_test(mb03fz TMB03FZ.f)
add_slicot_test(mb03kd TMB03KD.f)
add_slicot_test(mb03ld TMB03LD.f)
add_slicot_test(mb03lf TMB03LF.f)
add_slicot_test(mb03lz TMB03LZ.f)
add_slicot_test(mb03md TMB03MD.f)
add_slicot_test(mb03nd TMB03ND.f)
add_slicot_test(mb03od TMB03OD.f)
add_slicot_test(mb03pd TMB03PD.f)
add_slicot_test(mb03qd TMB03QD.f)
add_slicot_test(mb03qg TMB03QG.f)
add_slicot_test(mb03rd TMB03RD.f)
add_slicot_test(mb03sd TMB03SD.f)
add_slicot_test(mb03td TMB03TD.f)
add_slicot_test(mb03ud TMB03UD.f)
add_slicot_test(mb03vd TMB03VD.f)
add_slicot_test(mb03wd TMB03WD.f)
add_slicot_test(mb03xd TMB03XD.f)
add_slicot_test(mb03xp TMB03XP.f)
add_slicot_test(mb03xz TMB03XZ.f)
add_slicot_test(mb03zd TMB03ZD.f)
add_slicot_test(mb04ad TMB04AD.f)
add_slicot_test(mb04az TMB04AZ.f)
add_slicot_test(mb04bd TMB04BD.f)
add_slicot_test(mb04bz TMB04BZ.f)
add_slicot_test(mb04dd TMB04DD.f)
add_slicot_test(mb04dl TMB04DL.f)
add_slicot_test(mb04dp TMB04DP.f)
add_slicot_test(mb04ds TMB04DS.f)
add_slicot_test(mb04dy TMB04DY.f)
add_slicot_test(mb04dz TMB04DZ.f)
add_slicot_test(mb04ed TMB04ED.f)
add_slicot_test(mb04fd TMB04FD.f)
add_slicot_test(mb04gd TMB04GD.f)
add_slicot_test(mb04md TMB04MD.f)
add_slicot_test(mb04od TMB04OD.f)
add_slicot_test(mb04pb TMB04PB.f)
add_slicot_test(mb04pu TMB04PU.f)
add_slicot_test(mb04tb TMB04TB.f)
add_slicot_test(mb04ts TMB04TS.f)
add_slicot_test(mb04ud TMB04UD.f)
add_slicot_test(mb04vd TMB04VD.f)
add_slicot_test(mb04xd TMB04XD.f)
add_slicot_test(mb04yd TMB04YD.f)
add_slicot_test(mb04zd TMB04ZD.f)
add_slicot_test(mb05md TMB05MD.f)
add_slicot_test(mb05nd TMB05ND.f)
add_slicot_test(mb05od TMB05OD.f)
add_slicot_test(mb4dlz TMB4DLZ.f)
add_slicot_test(mb4dpz TMB4DPZ.f)
add_slicot_test(mc01md TMC01MD.f)
add_slicot_test(mc01nd TMC01ND.f)
add_slicot_test(mc01od TMC01OD.f)
add_slicot_test(mc01pd TMC01PD.f)
add_slicot_test(mc01qd TMC01QD.f)
add_slicot_test(mc01rd TMC01RD.f)
add_slicot_test(mc01sd TMC01SD.f)
add_slicot_test(mc01td TMC01TD.f)
add_slicot_test(mc01vd TMC01VD.f)
add_slicot_test(mc01wd TMC01WD.f)
add_slicot_test(mc01xd TMC01XD.f)
add_slicot_test(mc03md TMC03MD.f)
add_slicot_test(mc03nd TMC03ND.f)
add_slicot_test(md03ad TMD03AD.f)
add_slicot_test(md03bd TMD03BD.f)
add_slicot_test(sb01bd TSB01BD.f)
add_slicot_test(sb01dd TSB01DD.f)
add_slicot_test(sb01md TSB01MD.f)
add_slicot_test(sb02md TSB02MD.f)
add_slicot_test(sb02nd TSB02ND.f)
add_slicot_test(sb02od TSB02OD.f)
add_slicot_test(sb02pd TSB02PD.f)
add_slicot_test(sb02qd TSB02QD.f)
add_slicot_test(sb02rd TSB02RD.f)
add_slicot_test(sb02sd TSB02SD.f)
add_slicot_test(sb03md TSB03MD.f)
add_slicot_test(sb03od TSB03OD.f)
add_slicot_test(sb03qd TSB03QD.f)
add_slicot_test(sb03sd TSB03SD.f)
add_slicot_test(sb03td TSB03TD.f)
add_slicot_test(sb03ud TSB03UD.f)
add_slicot_test(sb04md TSB04MD.f)
add_slicot_test(sb04nd TSB04ND.f)
add_slicot_test(sb04od TSB04OD.f)
add_slicot_test(sb04pd TSB04PD.f)
add_slicot_test(sb04qd TSB04QD.f)
add_slicot_test(sb04rd TSB04RD.f)
add_slicot_test(sb06nd TSB06ND.f)
add_slicot_test(sb08cd TSB08CD.f)
add_slicot_test(sb08dd TSB08DD.f)
add_slicot_test(sb08ed TSB08ED.f)
add_slicot_test(sb08fd TSB08FD.f)
add_slicot_test(sb08md TSB08MD.f)
add_slicot_test(sb08nd TSB08ND.f)
add_slicot_test(sb09md TSB09MD.f)
add_slicot_test(sb10dd TSB10DD.f)
add_slicot_test(sb10ed TSB10ED.f)
add_slicot_test(sb10fd TSB10FD.f)
add_slicot_test(sb10hd TSB10HD.f)
add_slicot_test(sb10id TSB10ID.f)
add_slicot_test(sb10kd TSB10KD.f)
add_slicot_test(sb10zd TSB10ZD.f)
add_slicot_test(sb16ad TSB16AD.f)
add_slicot_test(sb16bd TSB16BD.f)
add_slicot_test(sb16cd TSB16CD.f)
add_slicot_test(sg02ad TSG02AD.f)
add_slicot_test(sg02nd TSG02ND.f)
add_slicot_test(sg03ad TSG03AD.f)
add_slicot_test(sg03bd TSG03BD.f)
add_slicot_test(tb01id TTB01ID.f)
add_slicot_test(tb01iz TTB01IZ.f)
add_slicot_test(tb01kd TTB01KD.f)
add_slicot_test(tb01ld TTB01LD.f)
add_slicot_test(tb01md TTB01MD.f)
add_slicot_test(tb01nd TTB01ND.f)
add_slicot_test(tb01pd TTB01PD.f)
add_slicot_test(tb01px TTB01PX.f)
add_slicot_test(tb01td TTB01TD.f)
add_slicot_test(tb01ud TTB01UD.f)
add_slicot_test(tb01uy TTB01UY.f)
add_slicot_test(tb01wd TTB01WD.f)
add_slicot_test(tb01wx TTB01WX.f)
add_slicot_test(tb01zd TTB01ZD.f)
add_slicot_test(tb03ad TTB03AD.f)
add_slicot_test(tb04ad TTB04AD.f)
add_slicot_test(tb04bd TTB04BD.f)
add_slicot_test(tb04cd TTB04CD.f)
add_slicot_test(tb05ad TTB05AD.f)
add_slicot_test(tc01od TTC01OD.f)
add_slicot_test(tc04ad TTC04AD.f)
add_slicot_test(tc05ad TTC05AD.f)
add_slicot_test(td03ad TTD03AD.f)
add_slicot_test(td04ad TTD04AD.f)
add_slicot_test(td05ad TTD05AD.f)
add_slicot_test(tf01md TTF01MD.f)
add_slicot_test(tf01nd TTF01ND.f)
add_slicot_test(tf01od TTF01OD.f)
add_slicot_test(tf01pd TTF01PD.f)
add_slicot_test(tf01qd TTF01QD.f)
add_slicot_test(tf01rd TTF01RD.f)
add_slicot_test(tg01ad TTG01AD.f)
add_slicot_test(tg01az TTG01AZ.f)
add_slicot_test(tg01cd TTG01CD.f)
add_slicot_test(tg01dd TTG01DD.f)
add_slicot_test(tg01ed TTG01ED.f)
add_slicot_test(tg01fd TTG01FD.f)
add_slicot_test(tg01fz TTG01FZ.f)
add_slicot_test(tg01gd TTG01GD.f)
add_slicot_test(tg01hd TTG01HD.f)
add_slicot_test(tg01id TTG01ID.f)
add_slicot_test(tg01jd TTG01JD.f)
add_slicot_test(tg01jy TTG01JY.f)
add_slicot_test(tg01ld TTG01LD.f)
add_slicot_test(tg01md TTG01MD.f)
add_slicot_test(tg01nd TTG01ND.f)
add_slicot_test(tg01pd TTG01PD.f)
add_slicot_test(tg01qd TTG01QD.f)
add_slicot_test(ud01bd TUD01BD.f)
add_slicot_test(ud01cd TUD01CD.f)
add_slicot_test(ud01dd TUD01DD.f)
add_slicot_test(ud01md TUD01MD.f)
add_slicot_test(ud01nd TUD01ND.f)
